critical bugfix + refactor
bench 1245854